# flare-qa-fe-skeleton

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
docs/superpowers/plans/: 2026-03-25-qa-skeleton-framework.md
docs/superpowers/specs/: 2026-03-25-qa-skeleton-framework-design.md
domain/app/: flare-faucet-ui.md
domain/protocols/: flare-faucet.md
pages/: base_page.py  faucet_page.py
skills/: transaction-polling.md
specs/: _template.md
specs/faucet/: request-c2flr.md
tests/: conftest.py  test_request_c2flr.py
