[project]
name = "qa-skeleton"
version = "0.1.0"
description = "Automated frontend testing with Claude Code and Playwright"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49",
    "pytest>=8.0",
    "pytest-playwright>=0.6",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: quick sanity checks",
    "regression: full regression suite",
]
pythonpath = ["tests"]
